# Amplify

./: .adonisrc.json  .env.example  .gitignore  Cargo.toml  CloudronManifest.json  Dockerfile  LICENSE  README.md  ace  ace-manifest.json  canister_ids.json  dfx.json  docker-entrypoint.sh  env.ts  index.html  jest.config.ts  next.config.js  nginx.conf  package-lock.json  package.json  server.ts  supervisord.conf  tailwind.config.ts  tsconfig.json  vite.config.ts  webpack.config.js
app/Controllers/Http/: CampaignsController.ts
app/Filters/: CampaignFilter.ts
app/Handlers/: Actor.ts  GetOpenChatSDK.ts  Taggr.ts  Twitter.ts
app/Middleware/: SilentAuth.ts
app/Models/: AllyToken.ts  Campaign.ts  Participation.ts  User.ts
commands/: SyncCampaigns.ts  SyncParticipants.ts  SyncPendingCampaigns.ts  SyncWinners.ts  SyncWinningParticipants.ts
config/: ally.ts  app.ts  cors.ts  database.ts  session.ts
contracts/: ally.ts  validator.ts
database/migrations/: 1695970153071_users.ts  1695970153073_ally_tokens.ts  1695977956544_change_password_in_users_tables.ts  1695977956555_change_email_to_null_in_users_tables.ts  1695977956556_add_username_in_users_tables.ts  1695977956557_add_account_id_in_users_tables.ts  1709100519634_campaigns.ts  1709143971017_participations.ts  1709143971018_change_json_columns.ts  1709143971019_change_campaign_and_other_columns.ts  1709143981019_add_campaign_id_column.ts  1709143981020_v2_campaigns_column_changes.ts  1709143981030_v2_users_column_changes.ts
database/seeders/: CampaignSeeder.ts
declarations/amplify_sc_rust_backend/: amplify_sc_rust_backend.did.d.ts  amplify_sc_rust_backend.did.ts  index.ts
src/__tests__/pages/: HomePage.test.tsx
src/amplify_sc_rust_backend/: Cargo.toml  amplify_sc_rust_backend.did
src/amplify_sc_rust_backend/src/: lib.rs  stable.rs  transfer.rs  types.rs  utils.rs
src/amplify_sc_rust_backend/test/: test.sh
src/amplify_sc_rust_frontend/src/: index.html  index.js
src/app/: App.tsx  index.css  main.tsx
src/app/(features)/: layout.tsx  page.tsx
src/app/Layout/: index.tsx
src/app/login/: layout.tsx  page.tsx
src/components/AuthLayout/: Banner.tsx  index.tsx
src/components/AuthWrapper/: index.tsx
src/components/CampaignDetails/: index.tsx
src/components/ClientOnly/: index.tsx
src/components/CommentModal/: index.tsx
src/components/Countdown/: getCountDownTime.ts  index.tsx
src/constant/: config.ts
src/hooks/: useCampaignsReducer.ts  useCanisters.ts  useRewardToken.ts
src/lib/: logger.ts  utils.ts
src/pages/: index.ts
src/pages/Admin/: index.tsx
src/providers/: ConnectICProvider.tsx  DynamicLoader.tsx  UserProvider.tsx  WhiteListedTokensProvider.tsx  plug-wallet.ts
start/: routes.ts  validator.ts
test/: backend.test.ts  identity.ts  transfer.test.ts
(+30 files in other folders)
