[package]
name = "amplify_sc_rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[build-dependencies]
candid = "0.9.10"

[dependencies]
candid = "0.9.10"
ic-cdk = "0.11.3"
ic-cdk-macros = "0.8.1"
ic-cdk-timers = "0.5.1" # Feel free to remove this dependency if you don't need timers
serde = "1.0.126"
serde_derive = "1.0.126"
ic-ledger-types = "0.8.0"
ic-stable-structures = "0.6.0"
