[package]
name = "amplify_sc_rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[build-dependencies]
candid = "0.9.10"

[dependencies]
candid = "0.9.10"
ic-kit = "0.4"
ic-cdk = "0.11.3"
ic-cdk-macros = "0.8.1"
ic-cdk-timers = "0.5.1" # Feel free to remove this dependency if you don't need timers
serde = "1.0.126"
serde_derive = "1.0.126"
ic-ledger-types = "0.8.0"
ic-stable-structures = "0.6.0"
icrc-ledger-types = "0.1.4"
getrandom = { version = "0.2", features = ["custom"] }
rand = { version = "0.8.5", features = [] }
group_canister_c2c_client = { git = "https://github.com/open-chat-labs/open-chat.git", version = "0.1.0", tag = "v2.0.1499-community" }
community_canister_c2c_client = { git = "https://github.com/open-chat-labs/open-chat.git", version = "0.1.0", tag = "v2.0.1499-community" }

#[dev-dependencies]
#tokio = { features = ["macros", "rt"] }
